--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,3 +8,7 @@
     <img class="hero-img" src="assets/images/digital-marketing.png" alt="" />
   </div>
 </div>
+
+<div>
+  <h1>hello world</h1>
+</div>
