--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
+<div class="container">
+  <app-header />
 
-<app-header />
-
-
-<router-outlet />
-<app-footer />
-
-
+  <router-outlet />
+  <app-footer />
+</div>
