--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,72 +1,103 @@
-
 @if(loading){
 
-    <div class="loading-center">
-      <div>
-    
-        <div class="spinner-grow purple" role="status">
-        </div>
-        <div class="spinner-grow purple" role="status">
-        </div><div class="spinner-grow purple" role="status">
-        </div><div class="spinner-grow purple" role="status">
-        </div><div class="spinner-grow purple" role="status">
-        </div>
-      </div>
-      <span class="loading">Loading...</span>
-    </div>
-  }
-  @else {
-    
-    <nav class="navbar navbar-expand-lg bg-body-tertiary nav">
-      <div class="container-fluid">
-        <div class="logo-center">
-          <a class="navbar-brand text-white fs-4" href="home">
-            <img class="img-logo" src="../assets/images/creative-digital.png" alt="logo image">
-          </a>
-        </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
-            <li class="nav-item">
-              <a class="nav-link active text-black fs-5" aria-current="page"  role="button" (click)="onNavClick()" [routerLink]="page.home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-black fs-5" role="button" [routerLink]="[page.about]" (click)="onNavClick()"  >About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-black fs-5" role="button" [routerLink]="[page.blog]" (click)="onNavClick()"  >Blog</a>
-            </li>
-            
-            <li class="nav-item">
-              <a class="nav-link text-black fs-5" role="button" [routerLink]="[page.contact]" (click)="onNavClick()"  >Contact</a>
-            </li>
-  
-           
-  
-              <li class="nav-item">
-                <!-- Button trigger modal -->
-  <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="openPackagesPage()">
-    See Packages
+<div class="loading-center">
+  <div>
+    <div class="spinner-grow purple" role="status"></div>
+    <div class="spinner-grow purple" role="status"></div>
+    <div class="spinner-grow purple" role="status"></div>
+    <div class="spinner-grow purple" role="status"></div>
+    <div class="spinner-grow purple" role="status"></div>
+  </div>
+  <span class="loading">Loading...</span>
+</div>
+} @else {
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary nav">
+  <div class="logo-center">
+    <a class="navbar-brand text-white fs-4" href="home">
+      <img
+        class="img-logo"
+        src="../assets/images/creative-digital.png"
+        alt="logo image"
+      />
+    </a>
+  </div>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
   </button>
-              </li>
-              
-           
-            
-          </ul>
-          <!-- Search bar pushed to the right -->
-          <form class="d-flex ms-auto" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-dark" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
-    
-  }
-  
- 
-  
-  
-  
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
+      <li class="nav-item">
+        <a
+          class="nav-link active text-black fs-5"
+          aria-current="page"
+          role="button"
+          (click)="onNavClick()"
+          [routerLink]="page.home"
+          >Home</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link text-black fs-5"
+          role="button"
+          [routerLink]="[page.about]"
+          (click)="onNavClick()"
+          >About</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link text-black fs-5"
+          role="button"
+          [routerLink]="[page.blog]"
+          (click)="onNavClick()"
+          >Blog</a
+        >
+      </li>
+
+      <li class="nav-item">
+        <a
+          class="nav-link text-black fs-5"
+          role="button"
+          [routerLink]="[page.contact]"
+          (click)="onNavClick()"
+          >Contact</a
+        >
+      </li>
+
+      <li class="nav-item">
+        <!-- Button trigger modal -->
+        <button
+          type="button"
+          class="btn btn-outline-dark"
+          data-bs-toggle="modal"
+          data-bs-target="#staticBackdrop"
+          (click)="openPackagesPage()"
+        >
+          See Packages
+        </button>
+      </li>
+    </ul>
+    <!-- Search bar pushed to the right -->
+    <form class="d-flex ms-auto" role="search">
+      <input
+        class="form-control me-2"
+        type="search"
+        placeholder="Search"
+        aria-label="Search"
+      />
+      <button class="btn btn-outline-dark" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+}
